kubes/movies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-web 
  labels:
    app: movies-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-web
  template:
    metadata:
      labels:
        app: movies-web
    spec:
      containers:
        - name: web
          image: 081952199324.dkr.ecr.us-east-1.amazonaws.com/atelier/movies:latest
          ports:
            - name: web
              containerPort: 80
      imagePullSecrets:
        - name: awsecr-cred
