kubes/movies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-web
  labels:
    app: movies-web
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
  selector:
    app: movies-web
