kubes/movies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-web 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - movies.atelier.run
      secretName: movies-web
  rules:
    - host: movies.atelier.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movies-web
                port:
                  number: 80
